--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,8 @@ chronicle.queue.rotation=DAILY
 quarkus.datasource.db-kind=mysql
 quarkus.datasource.username=root
 quarkus.datasource.password=1234
-quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/telcobright
+db.name=telcobright
+quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/${db.name}
 quarkus.datasource.jdbc.min-size=3
 quarkus.datasource.jdbc.max-size=8
 
