--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
+##################################
+# === Chronicle Queue Settings ===
+##################################
 chronicle.queue.path=queue-data
-
-# Additional Chronicle settings
 chronicle.queue.disableFileLocking=true
 chronicle.queue.useSparseFiles=true
 chronicle.queue.block.size=67108864
@@ -9,9 +10,11 @@ chronicle.queue.roll-cycle=DAILY
 chronicle.queue.offset-table=queue_offsets
 chronicle.queue.replay-on-start=true
 chronicle.queue.rotation=DAILY
+chronicle.queue.synchronous.writes=false
 
-
-# MySQL Configuration
+##################################
+# === MySQL Database Settings ===
+##################################
 quarkus.datasource.db-kind=mysql
 quarkus.datasource.username=root
 quarkus.datasource.password=1234
@@ -20,15 +23,9 @@ quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/${db.name}
 quarkus.datasource.jdbc.min-size=3
 quarkus.datasource.jdbc.max-size=8
 
-# ================ ADVANCED QUEUE SETTINGS ================
-# Block size in bytes (default: 64MB)
-
-
-# Whether to force synchronous writes (default: false)
-chronicle.queue.synchronous.writes=false
-# Index spacing for random access (default: 16)
-
-# JVM Arguments (if needed for runtime)
+##################################
+# === JVM Runtime Arguments (optional) ===
+##################################
 quarkus.args=\
 --add-opens=java.base/java.lang=ALL-UNNAMED \
 --add-opens=java.base/java.io=ALL-UNNAMED \
@@ -37,9 +34,30 @@ quarkus.args=\
 --add-opens=java.base/sun.nio.ch=ALL-UNNAMED \
 --add-opens=java.management/sun.management=ALL-UNNAMED
 
+##################################
+# === Logging Settings ===
+##################################
 
+# Console Logging
 quarkus.log.console.enable=true
 quarkus.log.console.json=false
 quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss.SSS} [%p] [%t] %c{30} - %m%n
+
+# Root log level
 quarkus.log.level=INFO
 
+# File Logging
+quarkus.log.file.enable=true
+quarkus.log.file.path=logs/app.log
+
+# Enable structured JSON logging
+quarkus.log.file.json=true
+
+# Optional: Add structured fields (for ELK)
+quarkus.log.file.json.fields.additional-field.env=prod
+quarkus.log.file.json.fields.additional-field.service=config-manager
+quarkus.log.file.json.fields.additional-field.hostname=${hostname:localhost}
+
+# File rotation: daily
+quarkus.log.file.rotation.file-suffix=.yyyy-MM-dd
+quarkus.log.file.rotation.max-backup-index=7
