testing debezium kafka listener at 98

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+quarkus.http.port=8085
 ##################################
 # === Chronicle Queue Settings ===
 ##################################
@@ -17,11 +18,13 @@ chronicle.queue.synchronous.writes=false
 ##################################
 quarkus.datasource.db-kind=mysql
 quarkus.datasource.username=root
-quarkus.datasource.password=1234
-db.name=telcobright
+quarkus.datasource.password=Takay1takaane$
+db.name=telcobright_76
 quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/${db.name}
 quarkus.datasource.jdbc.min-size=3
 quarkus.datasource.jdbc.max-size=8
+quarkus.datasource.db-version=5.7.0
+quarkus.hibernate-orm.validate-in-dev-mode=false
 
 ##################################
 # === JVM Runtime Arguments (optional) ===
@@ -61,3 +64,13 @@ quarkus.log.file.json.fields.additional-field.hostname=${hostname:localhost}
 # File rotation: daily
 quarkus.log.file.rotation.file-suffix=.yyyy-MM-dd
 quarkus.log.file.rotation.max-backup-index=7
+
+# kafka configs
+# Kafka broker (adjust to your setup)
+kafka.bootstrap.servers=localhost:9092
+
+# Incoming channel configuration
+mp.messaging.incoming.config-event-loader.connector=smallrye-kafka
+mp.messaging.incoming.config-event-loader.topic=config_event_loader
+mp.messaging.incoming.config-event-loader.group.id=esl
+mp.messaging.incoming.config-event-loader.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
