added package insertion directly into cache by debezium

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,10 +17,10 @@ chronicle.queue.synchronous.writes=false
 # === MySQL Database Settings ===
 ##################################
 quarkus.datasource.db-kind=mysql
-quarkus.datasource.username=root
+quarkus.datasource.username=tbuser
 quarkus.datasource.password=Takay1takaane$
-db.name=telcobright_76
-quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/${db.name}
+db.name=telcobright
+quarkus.datasource.jdbc.url=jdbc:mysql://103.95.96.77:3306/${db.name}
 quarkus.datasource.jdbc.min-size=3
 quarkus.datasource.jdbc.max-size=8
 quarkus.datasource.db-version=5.7.0
@@ -72,5 +72,10 @@ kafka.bootstrap.servers=localhost:9092
 # Incoming channel configuration
 mp.messaging.incoming.config-event-loader.connector=smallrye-kafka
 mp.messaging.incoming.config-event-loader.topic=config_event_loader
-mp.messaging.incoming.config-event-loader.group.id=esl
+mp.messaging.incoming.config-event-loader.group.id=chronicleGroup
 mp.messaging.incoming.config-event-loader.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+
+mp.messaging.incoming.telcobright_all_tables.connector=smallrye-kafka
+mp.messaging.incoming.telcobright_all_tables.value.deserializer=com.telcobright.oltp.config.DebeziumEventDeserializer
+mp.messaging.incoming.telcobright_all_tables.auto.offset.reset=earliest
+
