--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,11 @@
 quarkus.http.port=8085
+
+##################################
+# === gRPC Server Settings ===
+##################################
+quarkus.grpc.server.port=9000
+quarkus.grpc.server.host=0.0.0.0
+quarkus.grpc.server.plain-text=true
 ##################################
 # === Chronicle Queue Settings ===
 ##################################
